<resources>
    <string name="app_name">InstagramClone</string>
    <string name="username">uri.frischman</string>

    <!--Snippet: Top Profile-->
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="options">Options</string>


    <!--Account Settings-->
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="change_photo">Change Photo</string>
    <string name="private_information">Private Information</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_acount_yet_sign_up_npw">No account yet? Sign Up Now!</string>
    <string name="please_wait">Please wait..</string>
    <string name="register_a_new_account">register a new account</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
</resources>
