<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:src="@drawable/horizontal_instagram_logo"
            android:id="@+id/loginLogoImageView"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:id="@+id/loginInputEmail"/>
            
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/password"
                android:id="@+id/loginInputPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginButton"
            android:background="@drawable/white_rounded_button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textColor="@color/link_blue"
            android:text="@string/no_acount_yet_sign_up_npw"/>

    </LinearLayout>

    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:id="@+id/loginProgressBar"
        android:visibility="gone"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        android:layout_below="@id/loginProgressBar"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:visibility="gone"/>

</RelativeLayout>