<merge xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <!--android:layout_marginBottom=""-->
        <!--&gt;-->


        <TextView
            android:id="@+id/textPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/posts"
            android:textColor="@color/grey"
            app:layout_constraintLeft_toLeftOf="@+id/textViewPosts"
            app:layout_constraintRight_toRightOf="@+id/textViewPosts"
            app:layout_constraintTop_toBottomOf="@+id/textViewPosts"/>

        <TextView
            android:id="@+id/textViewPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewFollowers"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/textViewFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/textViewPosts"
            app:layout_constraintRight_toLeftOf="@+id/textViewFollowing"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/following"
            android:textColor="@color/grey"
            app:layout_constraintLeft_toLeftOf="@+id/textViewFollowing"
            app:layout_constraintRight_toRightOf="@+id/textViewFollowing"
            app:layout_constraintTop_toBottomOf="@+id/textViewFollowing"
            app:layout_constraintHorizontal_bias="0.533"/>

        <TextView
            android:id="@+id/textViewEditProfile"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="20dp"
            android:text="@string/edit_your_profile"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:background="@drawable/grey_border"
            app:layout_constraintLeft_toLeftOf="@+id/textFollowers"
            app:layout_constraintRight_toRightOf="@+id/textFollowers"
            app:layout_constraintTop_toBottomOf="@+id/textFollowers"/>

        <TextView
            android:id="@+id/textFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/followers"
            android:textColor="@color/grey"
            app:layout_constraintLeft_toLeftOf="@+id/textViewFollowers"
            app:layout_constraintRight_toRightOf="@+id/textViewFollowers"
            app:layout_constraintTop_toBottomOf="@+id/textViewFollowers"/>

        <TextView
            android:id="@+id/textViewFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="8dp"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewFollowers"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>



</merge>